--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     .dnone {
         display: none;
     }
+    
+    .fonts {
+        font-family: verdana;
+        font-size: 12px;
+        font-weight: 400;
+        color: #343a409c;
+    }
 </style>
 
 <body>
@@ -31,7 +38,7 @@
                     <label for="id ">GENDER</label>
                 </div>
             </div>
-            <div class="row bg-light" id="add-data"> </div>
+            <div class="row bg-light fonts text-left" id="add-data"> </div>
         </div>
     </div>
     <script src="js/main.js "></script>
